# HARM

./: CMakeLists.txt  README.md  arch.h  branch_list.h  hal.c  hal.h  harm.c  harm.h  hooks.c  interrupt.c  macros.h  main.c  metadata.c  metadata.h  nsc.c  object.c  object.h  object_list.h  revise.c  revise.h  revise_list.h  sandbox.c  sandbox.h  secure_lib.c  secure_lib.h
rb_tree/: rb_tree.c  rb_tree.h
scripts/: README.md  extract_cmse.sh  setup.sh
scripts/librwtool/: elf_parser.py  main.py  requirements.txt  setup.sh
scripts/librwtool/librw/: rw.py  symbol.py
scripts/librwtool/librw/instrument/: control_flow.py  interrupt.py  misc.py
scripts/librwtool/librw/ir/: __init__.py  adr.py  arm_reg.py  block.py  branch.py  cond_branch.py  firmware.py  function.py  indirect_branch.py  ir.py  it_block.py  ldr.py  literal.py  load_branch_address.py  nop.py  object.py  pop.py  ref.py  reg_to_reg.py  ret.py  ret_encode.py  retrieve.py  table_branch.py  utils.py  vector.py  wfi.py
scripts/librwtool/patches/: keystone.patch
supports/: README.md
supports/lpc55s69/: CMakeLists.txt  lpc55s69.ld  lpc55s69_hal.c
supports/lpc55s69/board/: board.c  board.h
supports/lpc55s69/device/: system_LPC55S69_cm33_core0.c
utils/: rb_tree.c  rb_tree.h
